		* Fixed several cases of amulecmd printing zero on big endian machines
		* Allow the user to cancel the app if Temp/Incoming is not found
		* Show downloads as shares in remote gui
		* Added a bunch of missing details in remote gui
		* amuleweb for Windows (with wx 2.9)
		* Fixed amuleweb crashing on tiny downloads
		* Show connected friends in blue in the friend list

	Vollstrecker:
		* Unify copyright lines
		* Fixed clean and distclean targets for make
		* Various Updates in debian/ see debian/changelog
		* Added crash handling in command-line tools

	Wuischke:
		* Simplify browser selection
		* Use DoIconize() for dclick on tray icon, too
		* Fix minimizing from tray icon
		* Add option to show chat messages in log
		* Add option to specify amuleweb binary location
		* Fix amuleweb progress bar display for files > 4GB
		* Make EC authentication procedure more secure
		* Add support for categories to ed2k
		* Backup config file on shutdown

	Special Thanks To:
		* Greek for his contributions to aMule's user interface.
		* btkaos for his important work finding the source of bugs.
		* myth for seeing when everyone else was blind and uncovering
		  the grandfather of all fuck-ups

--------------------------------------------------------------------------------

Version 2.2.5 - The "never say never" version.
----------
2009-05-16

	GonoszTopi:
		* Fixed possible security hole when previewing filenames containing single quotes
		* Fixed default webserver port

	Stu Redman:
		* Fixed upload of the last part of a file which he broke in 2.2.4
		* Fixed setting speed limits from remote gui's tray icon

	Special Thanks To:
		* CroMag for pointing out the upload problem

--------------------------------------------------------------------------------

Version 2.2.4 - The "we didn't have a .4 version since... well... long ago" version.
----------
2009-04-03

	freddy77:
		* Plugged various memory leaks.

	FreeToGo: